# test-operational-control-with-icub

app/scripts/: app.xml
src/: .gitignore  CMakeLists.txt  main.cpp
src/code/: CMakeLists.txt  main.cpp
src/code/app/scripts/: app.xml
src/test/: CMakeLists.txt
src/test/src/: MakeItRollTest.cpp  MakeItRollTest.h
src/test/src/operational-control-test/: CMakeLists.txt  OperationalControlTest.cpp
src/test/suits/: mySuit.xml  operational-control-with-icub.xml  result.txt
src/test/suits/fixtures/: my-fixture.xml
